fix(profile): keep the query's order out of labelsByAtom
CI caught this and it is not a flake. AtomTagMappingIT passed here and
failed on the runner because labelsByAtom ended in Set.copyOf and
Map.copyOf, and the JDK's immutable collections iterate in an order
salted per JVM run. Measured directly: three runs of the same
three-element set through Set.copyOf gave three different orders, one of
which happened to be insertion order. Locally it was a coin flip that
kept landing the right way up.

The javadoc on the query already said the ordering was deliberate — Faz
B's determinism is a property of its inputs — and the code then threw it
away two lines later. Collections.unmodifiableSet over the LinkedHashSet
makes the claim true, which is the same call UserFacingError made for
the same reason.

The audit that followed found a second instance in Job. All three JSON
columns went through Map.copyOf, and JobWorker builds the error map
ordered on purpose so that `code` leads; every restart would have
serialised the same failure differently. Fixed the same way, and pinned
by a test.

The rule is now in CLAUDE.md next to the other local-versus-runner
differences: order that reaches a JSON column, a response or an
assertion needs Collections.unmodifiable* over a Linked*.

Tests: 526 unit (was 525), 185 integration.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Uftd6yxg3pR6xk7ktjBZXo